tests/baselines/reference/emitArrowFunctionWhenUsingArguments02_ES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts(1,15): error TS2304: Cannot find name 'arguments'.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts (1 errors) ====
    var a = () => arguments;
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.